--- a/index.html
+++ b/index.html
@@ -287,7 +287,7 @@
                     웹퍼블리싱의 매력을 느껴 새롭게 도전하게 되었습니다.<br>
                     웹퍼블리셔로서 성장할 수 있는 기회를 주신다면<br>
                     최선을 다해 <span>배우고</span>, <span>협력</span>하고, <span>성장</span>하겠습니다! "</p>
-                <img src="img/about.png" alt="내사진">
+                <img src="img/about/about.png" alt="내사진">
                 <ul class="list">
                     <li>이름 : <span>최지수</span></li>
                     <li>생년월일 : <span>xxxx.xx.xx</span></li>
@@ -387,7 +387,7 @@
                             <li><span>work</span>퍼블리싱 100%</li>
                         </ul>
                         <a class="button" href="https://jwdy02.github.io/pf1-accuniq/">VIEW</a>
-                        <img src="img/accuniq.png" alt="accuniq홈페이지">
+                        <img src="img/portfolio/accuniq.png" alt="accuniq홈페이지">
                     </div>
                     <div class="port port2">
                         <h3>Lpoint</h3>
@@ -399,7 +399,7 @@
                             <li><span>work</span>퍼블리싱 100%</li>
                         </ul>
                         <a class="button" href="https://jwdy02.github.io/pf2-lpoint/">VIEW</a>
-                        <img src="img/lpoint.png" alt="lpoint홈페이지">
+                        <img src="img/portfolio/lpoint.png" alt="lpoint홈페이지">
                     </div>
                     <div class="port port3">
                         <h3>HBpaper</h3>
@@ -411,7 +411,7 @@
                             <li><span>work</span>퍼블리싱 100%</li>
                         </ul>
                         <a class="button" href="https://jwdy02.github.io/pf3-hbpaper/">VIEW</a>
-                        <img src="img/hbpaper.png" alt="hbpaper홈페이지">
+                        <img src="img/portfolio/hbpaper.png" alt="hbpaper홈페이지">
                     </div>
                     <div class="port port4">
                         <h3>HBpaper-리뉴얼</h3>
@@ -423,7 +423,7 @@
                             <li><span>work</span>퍼블리싱 100%</li>
                         </ul>
                         <a class="button" href="https://jwdy02.github.io/pf3-hbpaper-re/">VIEW</a>
-                        <img src="img/hbpaper_re.png" alt="hbpaper-리뉴얼 홈페이지">
+                        <img src="img/portfolio/hbpaper_re.png" alt="hbpaper-리뉴얼 홈페이지">
                     </div>
                     <div class="port port5">
                         <h3>Hitejinro</h3>
@@ -435,7 +435,7 @@
                             <li><span>work</span>퍼블리싱 100%</li>
                         </ul>
                         <a class="button" href="https://jwdy02.github.io/pf4-Hitejinro/">VIEW</a>
-                        <img src="img/hitejinro.png" alt="hitejinro홈페이지">
+                        <img src="img/portfolio/hitejinro.png" alt="hitejinro홈페이지">
                     </div>
                     <div class="port port6">
                         <h3>final kitchen</h3>
@@ -447,7 +447,7 @@
                             <li><span>work</span>퍼블리싱 100%</li>
                         </ul>
                         <a class="button" href="https://jwdy02.github.io/final-kitchen/">VIEW</a>
-                        <img src="img/final_kitchen.png" alt="final_kitchen홈페이지">
+                        <img src="img/portfolio/final_kitchen.png" alt="final_kitchen홈페이지">
                     </div>
                     <div class="port port7">
                         <h3>hanwha</h3>
@@ -459,7 +459,7 @@
                             <li><span>work</span>퍼블리싱 100%</li>
                         </ul>
                         <a class="button" href="https://jwdy02.github.io/hanwha/">VIEW</a>
-                        <img src="img/hanwha.png" alt="hanwha홈페이지">
+                        <img src="img/portfolio/hanwha.png" alt="hanwha홈페이지">
                     </div>
                     <div class="port port8">
                         <h3>beanpole</h3>
@@ -471,7 +471,7 @@
                             <li><span>work</span>퍼블리싱 100%</li>
                         </ul>
                         <a class="button" href="https://jwdy02.github.io/beanpole/">VIEW</a>
-                        <img src="img/beanpole.png" alt="beanpole홈페이지">
+                        <img src="img/portfolio/beanpole.png" alt="beanpole홈페이지">
                     </div>
                     <div class="port port9">
                         <h3>SM Entertainment</h3>
@@ -483,7 +483,7 @@
                             <li><span>work</span>퍼블리싱 100%</li>
                         </ul>
                         <a class="button" href="https://jwdy02.github.io/SM-Entertainment/">VIEW</a>
-                        <img src="img/SM-Entertainment.png" alt="sm엔터테인먼트홈페이지">
+                        <img src="img/portfolio/SM-Entertainment.png" alt="sm엔터테인먼트홈페이지">
                     </div>
                 </div>
             </div>
