--- a/index.html
+++ b/index.html
@@ -479,7 +479,7 @@
                             <li><span>TYPE</span>웹사이트 (기업체 홈페이지)</li>
                             <li><span>PAGE</span>index</li>
                             <li><span>TOOL</span>HTML5(emmet), CSS3(sass),<br>
-                                <span class="under">javascrpit, jqurey, adobe</span></li>
+                                <span class="under">adobe</span></li>
                             <li><span>work</span>퍼블리싱 100%</li>
                         </ul>
                         <a class="button" href="https://jwdy02.github.io/SM-Entertainment/">VIEW</a>
