--- a/index.html
+++ b/index.html
@@ -515,6 +515,7 @@
     <footer class="box">
         <div class="wrap">
             <p>본 페이지는 상업적 목적이 아닌 개인 포트폴리오용으로 제작되었습니다.</p>
+            <p>Copyright 2023. JISU CHOI All rights reserved</p>
         </div>
     </footer>
 </body>
