--- a/index.html
+++ b/index.html
@@ -386,7 +386,7 @@
                                 <span class="under">javascrpit, jqurey, adobe</span></li>
                             <li><span>work</span>퍼블리싱 100%</li>
                         </ul>
-                        <a class="button" href="https://jwdy02.github.io/pf1-accuniq/">VIEW</a>
+                        <a class="button" href="https://jwdy02.github.io/pf1-accuniq/" target="_blank">VIEW</a>
                         <img src="img/portfolio/accuniq.png" alt="accuniq홈페이지">
                     </div>
                     <div class="port port2">
@@ -398,7 +398,7 @@
                                 <span class="under">javascrpit, jqurey, adobe</span></li>
                             <li><span>work</span>퍼블리싱 100%</li>
                         </ul>
-                        <a class="button" href="https://jwdy02.github.io/pf2-lpoint/">VIEW</a>
+                        <a class="button" href="https://jwdy02.github.io/pf2-lpoint/" target="_blank">VIEW</a>
                         <img src="img/portfolio/lpoint.png" alt="lpoint홈페이지">
                     </div>
                     <div class="port port3">
@@ -410,7 +410,7 @@
                                 <span class="under">javascrpit, jqurey, adobe</span></li>
                             <li><span>work</span>퍼블리싱 100%</li>
                         </ul>
-                        <a class="button" href="https://jwdy02.github.io/pf3-hbpaper/">VIEW</a>
+                        <a class="button" href="https://jwdy02.github.io/pf3-hbpaper/" target="_blank">VIEW</a>
                         <img src="img/portfolio/hbpaper.png" alt="hbpaper홈페이지">
                     </div>
                     <div class="port port4">
@@ -422,7 +422,7 @@
                                 <span class="under">javascrpit, jqurey, adobe</span></li>
                             <li><span>work</span>퍼블리싱 100%</li>
                         </ul>
-                        <a class="button" href="https://jwdy02.github.io/pf3-hbpaper-re/">VIEW</a>
+                        <a class="button" href="https://jwdy02.github.io/pf3-hbpaper-re/" target="_blank">VIEW</a>
                         <img src="img/portfolio/hbpaper_re.png" alt="hbpaper-리뉴얼 홈페이지">
                     </div>
                     <div class="port port5">
@@ -434,7 +434,7 @@
                                 <span class="under">javascrpit, jqurey, adobe</span></li>
                             <li><span>work</span>퍼블리싱 100%</li>
                         </ul>
-                        <a class="button" href="https://jwdy02.github.io/pf4-Hitejinro/">VIEW</a>
+                        <a class="button" href="https://jwdy02.github.io/pf4-Hitejinro/" target="_blank">VIEW</a>
                         <img src="img/portfolio/hitejinro.png" alt="hitejinro홈페이지">
                     </div>
                     <div class="port port6">
@@ -446,7 +446,7 @@
                                 <span class="under">javascrpit, jqurey, adobe</span></li>
                             <li><span>work</span>퍼블리싱 100%</li>
                         </ul>
-                        <a class="button" href="https://jwdy02.github.io/final-kitchen/">VIEW</a>
+                        <a class="button" href="https://jwdy02.github.io/final-kitchen/" target="_blank">VIEW</a>
                         <img src="img/portfolio/final_kitchen.png" alt="final_kitchen홈페이지">
                     </div>
                     <div class="port port7">
@@ -458,7 +458,7 @@
                                 <span class="under">javascrpit, jqurey, adobe</span></li>
                             <li><span>work</span>퍼블리싱 100%</li>
                         </ul>
-                        <a class="button" href="https://jwdy02.github.io/hanwha/">VIEW</a>
+                        <a class="button" href="https://jwdy02.github.io/hanwha/" target="_blank">VIEW</a>
                         <img src="img/portfolio/hanwha.png" alt="hanwha홈페이지">
                     </div>
                     <div class="port port8">
@@ -470,7 +470,7 @@
                                 <span class="under">javascrpit, jqurey, adobe</span></li>
                             <li><span>work</span>퍼블리싱 100%</li>
                         </ul>
-                        <a class="button" href="https://jwdy02.github.io/beanpole/">VIEW</a>
+                        <a class="button" href="https://jwdy02.github.io/beanpole/" target="_blank">VIEW</a>
                         <img src="img/portfolio/beanpole.png" alt="beanpole홈페이지">
                     </div>
                     <div class="port port9">
@@ -482,7 +482,7 @@
                                 <span class="under">adobe</span></li>
                             <li><span>work</span>퍼블리싱 100%</li>
                         </ul>
-                        <a class="button" href="https://jwdy02.github.io/SM-Entertainment/">VIEW</a>
+                        <a class="button" href="https://jwdy02.github.io/SM-Entertainment/" target="_blank">VIEW</a>
                         <img src="img/portfolio/SM-Entertainment.png" alt="sm엔터테인먼트홈페이지">
                     </div>
                 </div>
