--- a/index.html
+++ b/index.html
@@ -287,7 +287,7 @@
                     웹퍼블리싱의 매력을 느껴 새롭게 도전하게 되었습니다.<br>
                     웹퍼블리셔로서 성장할 수 있는 기회를 주신다면<br>
                     최선을 다해 <span>배우고</span>, <span>협력</span>하고, <span>성장</span>하겠습니다! "</p>
-                <img src="img/about/about.png" alt="내사진">
+                <img src="img/about/about2.png" alt="내사진">
                 <ul class="list">
                     <li>이름 : <span>최지수</span></li>
                     <li>생년월일 : <span>xxxx.xx.xx</span></li>
