--- a/index.html
+++ b/index.html
@@ -301,83 +301,40 @@
             <div class="wrap">
                 <h2 class="h2" data-aos="fade-right" data-aos-duration="1000">SKILL</h2>
                 <div class="left">
-                    <div class="bar">
-                        <div class="skill">HTML5</div>
-                        <div class="outer">
-                            <div class="inner" style="width:80%;"></div>
-                        </div>
-                    </div>
-                    <div class="bar">
-                        <div class="skill">CSS3</div>
-                        <div class="outer">
-                            <div class="inner" style="width:80%;"></div>
-                        </div>
-                    </div>
-                    <div class="bar">
-                        <div class="skill">Javascript / jQuery</div>
-                        <div class="outer">
-                            <div class="inner" style="width:30%;"></div>
-                        </div>
-                    </div>
-                    <div class="bar">
-                        <div class="skill">젠코딩</div>
-                        <div class="outer">
-                            <div class="inner" style="width:50%;"></div>
-                        </div>
-                    </div>
-                    <div class="bar">
-                        <div class="skill">SASS</div>
-                        <div class="outer">
-                            <div class="inner" style="width:80%;"></div>
-                        </div>
-                    </div>
-                    <div class="bar">
-                        <div class="skill">AOS</div>
-                        <div class="outer">
-                            <div class="inner" style="width:50%;"></div>
-                        </div>
-                    </div>
-                    <div class="bar">
-                        <div class="skill">Visual studio</div>
-                        <div class="outer">
-                            <div class="inner" style="width:60%;"></div>
-                        </div>
-                    </div>
-                    <div class="bar">
-                        <div class="skill">Photoshop</div>
-                        <div class="outer">
-                            <div class="inner" style="width:90%;"></div>
-                        </div>
-                    </div>
-                    <div class="bar">
-                        <div class="skill">illustration</div>
-                        <div class="outer">
-                            <div class="inner" style="width:80%;"></div>
-                        </div>
-                    </div>
-                    <div class="bar">
-                        <div class="skill">카카오 오븐</div>
-                        <div class="outer">
-                            <div class="inner" style="width:90%;"></div>
-                        </div>
-                    </div>
+                    <ul>
+                        <li>
+                            <h3 class="h4">design</h3>
+                            <p>그래픽 디자인 분야의 직종을 희망하여 독학으로 포토샵 자격증을 취득했으며,<br>
+                                기초적인 작업을 수행할 수 있고, 벤치마킹을 통한 디자인 공부를 하고있습니다.
+                            </p>
+                            <img src="img/skill/ps.png" alt="포토샵 이미지">
+                            <img src="img/skill/ai.png" alt="일러스트 이미지">
+                        </li>
+                        <li>
+                            <h3 class="h4">publishing</h3>
+                            <p>퍼블리싱 과정을 공부하면서 HTML, CSS, JQuary, Java script를 배웠으며,<br>
+                                시멘틱 태그를 비롯한 높은 웹 접근성의 작업을 할 수 있습니다.</p>
+                            <img src="img/skill/html.png" alt="html 이미지">
+                            <img src="img/skill/css.png" alt="css 이미지">
+                            <img src="img/skill/jq.png" alt="제이쿼리 이미지">
+                            <img src="img/skill/js.png" alt="자바스크립트 이미지">
+                        </li>
+                        <li>
+                            <h3 class="h4">etc</h3>
+                            <p>비주얼스튜디오 코드, SCSS, 젠코딩을 통한 HTML 구조를 만들기가 가능합니다</p>
+                            <img src="img/skill/vs.png" alt="비주얼 스튜디오코드 이미지">
+                            <img src="img/skill/sass.png" alt="사스 이미지">
+                        </li>
+                    </ul>
                 </div>
             </div>
-                <!-- <li>Photoshop</li>
-                    <li>illustration</li>
-                    <li>HTNL5</li>
-                    <li>CSS</li>
-                    <li>jQuery</li>
-                    <li>Javascript</li>
-                    <li>Visual studio</li>
-                    <li>젠코딩</li> -->
         </section>
     <!-- 포트폴리오 -->
         <section id="portfolio" class="flex column center paddingT50 paddingB50 vh100 box">
             <div class="wrap paddingT50  paddingB50 paddingL50 paddingR50" >
                 <h2 class="h2" data-aos="fade-left" data-aos-duration="2000">PORTFOLIO</h2>
                 <div class=" portAni flex">
-                    <div class="port port1">
+                    <!-- <div class="port port1">
                         <h3>Accuniq</h3>
                         <ul class="list">
                             <li><span>TYPE</span>웹사이트 (기업체 홈페이지)</li>
@@ -388,8 +345,8 @@
                         </ul>
                         <a class="button" href="https://jwdy02.github.io/pf1-accuniq/" target="_blank">VIEW</a>
                         <img src="img/portfolio/accuniq.png" alt="accuniq홈페이지">
-                    </div>
-                    <div class="port port2">
+                    </div> -->
+                    <!-- <div class="port port2">
                         <h3>Lpoint</h3>
                         <ul class="list">
                             <li><span>TYPE</span>웹사이트 (기업체 홈페이지)</li>
@@ -412,7 +369,7 @@
                         </ul>
                         <a class="button" href="https://jwdy02.github.io/pf3-hbpaper/" target="_blank">VIEW</a>
                         <img src="img/portfolio/hbpaper.png" alt="hbpaper홈페이지">
-                    </div>
+                    </div> -->
                     <div class="port port4">
                         <h3>HBpaper-리뉴얼</h3>
                         <ul class="list">
@@ -425,7 +382,7 @@
                         <a class="button" href="https://jwdy02.github.io/pf3-hbpaper-re/" target="_blank">VIEW</a>
                         <img src="img/portfolio/hbpaper_re.png" alt="hbpaper-리뉴얼 홈페이지">
                     </div>
-                    <div class="port port5">
+                    <!-- <div class="port port5">
                         <h3>Hitejinro</h3>
                         <ul class="list">
                             <li><span>TYPE</span>반응형 웹사이트 (기업체 홈페이지)</li>
@@ -436,7 +393,7 @@
                         </ul>
                         <a class="button" href="https://jwdy02.github.io/pf4-Hitejinro/" target="_blank">VIEW</a>
                         <img src="img/portfolio/hitejinro.png" alt="hitejinro홈페이지">
-                    </div>
+                    </div> -->
                     <div class="port port6">
                         <h3>final kitchen</h3>
                         <ul class="list">
