--- a/index.html
+++ b/index.html
@@ -282,18 +282,14 @@
         <section id="about" class="flex column center paddingT50 paddingB50 vh100 box">
             <div class="wrap">
                 <h2 class="h2" data-aos="fade-left" data-aos-duration="1000">ABOUT</h2>
-                <p>" 안녕하세요! 도전하고 발전하는 <span>예비웹퍼블리셔 최지수</span>입니다.<br>
+                <p>" 안녕하세요 <span>예비웹퍼블리셔 최지수</span>입니다.<br>
                     <span>시각적 접점</span>과 <span>사용자 경험</span>으로 웹페이지를 만드는<br>
-                    웹퍼블리싱의 매력을 느껴 새롭게 도전하게 되었습니다.<br>
+                    퍼블리싱의 매력을 느껴 새롭게 도전하게 되었습니다.<br>
+                    저는 <span>협업</span>과 <span>소통</span>을 매우 중요하게 생각하며,<br>
+                    <span>새로운 기술</span>과 <span>트렌드</span>에 많은 관심을 가지고 있습니다.<br>
                     웹퍼블리셔로서 성장할 수 있는 기회를 주신다면<br>
-                    최선을 다해 <span>배우고</span>, <span>협력</span>하고, <span>성장</span>하겠습니다! "</p>
+                    함께 성장 하고 싶은 <span>웹퍼블리셔 최지수</span>가 되겠습니다 "</p>
                 <img src="img/about/about2.png" alt="내사진">
-                <ul class="list">
-                    <li>이름 : <span>최지수</span></li>
-                    <li>생년월일 : <span>xxxx.xx.xx</span></li>
-                    <li>학력 : <span>신구대학교 원예디자인과 플로리스트전공</span></li>
-                    <li>교육 : <span>모란 이젠it아카데미 웹디자인, 웹퍼블리셔 5개월 과정 수료</span></li>
-                </ul>
             </div>
         </section>
      <!-- 스킬 --> 
@@ -305,7 +301,7 @@
                         <li>
                             <h3 class="h4">design</h3>
                             <p>그래픽 디자인 분야의 직종을 희망하여 독학으로 포토샵 자격증을 취득했으며,<br>
-                                기초적인 작업을 수행할 수 있고, 벤치마킹을 통한 디자인 공부를 하고있습니다.
+                                기초적인 작업을 수행할 수 있고, 벤치마킹을 통한 웹 디자인 공부를 하고있습니다.
                             </p>
                             <img src="img/skill/ps.png" alt="포토샵 이미지">
                             <img src="img/skill/ai.png" alt="일러스트 이미지">
