--- a/index.html
+++ b/index.html
@@ -317,7 +317,8 @@
                         </li>
                         <li>
                             <h3 class="h4">etc</h3>
-                            <p>비주얼스튜디오 코드, SCSS, 젠코딩을 통한 HTML 구조를 만들기가 가능합니다</p>
+                            <p>깃허브, 비주얼스튜디오 코드, SCSS, 젠코딩을 통한 HTML 구조를 만들기가 가능합니다</p>
+                            <img src="img/skill/github.png" alt="깃허브 이미지">
                             <img src="img/skill/vs.png" alt="비주얼 스튜디오코드 이미지">
                             <img src="img/skill/sass.png" alt="사스 이미지">
                         </li>
@@ -369,7 +370,7 @@
                     <div class="port port4">
                         <h3>HBpaper-리뉴얼</h3>
                         <ul class="list">
-                            <li><span>TYPE</span>반응형 웹사이트 (기업체 홈페이지)</li>
+                            <li><span>TYPE</span>웹사이트 (기업체 홈페이지)</li>
                             <li><span>PAGE</span>index</li>
                             <li><span>TOOL</span>HTML5(emmet), CSS3(sass),<br>
                                 <span class="under">javascrpit, jqurey, adobe</span></li>
