--- a/index.html
+++ b/index.html
@@ -300,16 +300,16 @@
                     <ul>
                         <li>
                             <h3 class="h4">design</h3>
-                            <p>그래픽 디자인 분야의 직종을 희망하여 독학으로 포토샵 자격증을 취득했으며,<br>
-                                기초적인 작업을 수행할 수 있고, 벤치마킹을 통한 웹 디자인 공부를 하고있습니다.
+                            <p>그래픽 디자인 분야의 직종을 희망하여 독학으로 <span>포토샵</span> 자격증을 취득했으며,<br>
+                                <span>일러스트</span>의 기초 작업을 할 수 있고, 벤치마킹을 통한 웹 디자인 공부를 하고있습니다.
                             </p>
                             <img src="img/skill/ps.png" alt="포토샵 이미지">
                             <img src="img/skill/ai.png" alt="일러스트 이미지">
                         </li>
                         <li>
                             <h3 class="h4">publishing</h3>
-                            <p>퍼블리싱 과정을 공부하면서 HTML, CSS, JQuary, Java script를 배웠으며,<br>
-                                시멘틱 태그를 비롯한 높은 웹 접근성의 작업을 할 수 있습니다.</p>
+                            <p>퍼블리싱 과정을 공부하면서 <span>HTML, CSS, JQuary, Java script</span>를 배웠으며,<br>
+                                시멘틱 태그를 비롯한 웹 표준과 웹 접근성의 작업을 할 수 있습니다.</p>
                             <img src="img/skill/html.png" alt="html 이미지">
                             <img src="img/skill/css.png" alt="css 이미지">
                             <img src="img/skill/jq.png" alt="제이쿼리 이미지">
@@ -317,7 +317,8 @@
                         </li>
                         <li>
                             <h3 class="h4">etc</h3>
-                            <p>깃허브, 비주얼스튜디오 코드, SCSS, 젠코딩을 통한 HTML 구조를 만들기가 가능합니다</p>
+                            <p><span>깃허브와 비주얼 스튜디오 코드</span>를 사용할 수 있으며,<br>
+                                <span>SASS, 젠코딩</span>을 통한 HTML 구조를 만들기가 가능합니다</p>
                             <img src="img/skill/github.png" alt="깃허브 이미지">
                             <img src="img/skill/vs.png" alt="비주얼 스튜디오코드 이미지">
                             <img src="img/skill/sass.png" alt="사스 이미지">
