--- a/index.html
+++ b/index.html
@@ -301,7 +301,7 @@
                         <li>
                             <h3 class="h4">design</h3>
                             <p>그래픽 디자인 분야의 직종을 희망하여 독학으로 <span>포토샵</span> 자격증을 취득했으며,<br>
-                                <span>일러스트</span>의 기초 작업을 할 수 있고, 벤치마킹을 통한 웹 디자인 공부를 하고있습니다.
+                                <span>일러스트</span>의 기초 작업을 할 수 있고, 벤치마킹을 통해 웹 디자인 공부를 하고있습니다.
                             </p>
                             <img src="img/skill/ps.png" alt="포토샵 이미지">
                             <img src="img/skill/ai.png" alt="일러스트 이미지">
