--- a/index.html
+++ b/index.html
@@ -216,7 +216,7 @@
                     autoplaySpeed: 3000,//자동 스크롤시 다음으로 넘어가는데 걸리는 시간
                     speed:2000, //다음 버튼 누르고 다음 화면 뜨는데까지 걸리는 시간
                     dots:true, //스크롤바 아래 동그라미 표시 여부
-                    arrows:false, //옆으로 이동하는 화살표 표시 여부
+                    arrows:true, //옆으로 이동하는 화살표 표시 여부
                     responsive: [
                         {
                             breakpoint: 769,
@@ -282,13 +282,18 @@
         <section id="about" class="flex column center paddingT50 paddingB50 vh100 box">
             <div class="wrap">
                 <h2 class="h2" data-aos="fade-left" data-aos-duration="1000">ABOUT</h2>
-                <p>" 안녕하세요 <span>예비웹퍼블리셔 최지수</span>입니다.<br>
+                <p>" 안녕하세요 <span>예비 웹퍼블리셔 최지수</span>입니다.<br>
                     <span>시각적 접점</span>과 <span>사용자 경험</span>으로 웹페이지를 만드는<br>
                     퍼블리싱의 매력을 느껴 새롭게 도전하게 되었습니다.<br>
                     저는 <span>협업</span>과 <span>소통</span>을 매우 중요하게 생각하며,<br>
                     <span>새로운 기술</span>과 <span>트렌드</span>에 많은 관심을 가지고 있습니다.<br>
-                    웹퍼블리셔로서 성장할 수 있는 기회를 주신다면<br>
+                    웹퍼블리셔로서 성장할 수 기회를 주신다면<br>
                     함께 성장 하고 싶은 <span>웹퍼블리셔 최지수</span>가 되겠습니다 "</p>
+                <ul>
+                    <li>이름 : <span>최지수</span></li>
+                    <li>나이 : <span>만 25세</span></li>
+                    <li>교육 : <span>모란 이젠 it 아카데미 웹퍼블리셔, 웹디자인 5개월 과정 수료</span></li>
+                </ul>
                 <img src="img/about/about2.png" alt="내사진">
             </div>
         </section>
@@ -309,7 +314,7 @@
                         <li>
                             <h3 class="h4">publishing</h3>
                             <p>퍼블리싱 과정을 공부하면서 <span>HTML, CSS, JQuary, Java script</span>를 배웠으며,<br>
-                                시멘틱 태그를 비롯한 웹 표준과 웹 접근성의 작업을 할 수 있습니다.</p>
+                                시멘틱 태그를 비롯한 웹 표준,웹 접근성, 웹 반응형의 작업을 할 수 있습니다.</p>
                             <img src="img/skill/html.png" alt="html 이미지">
                             <img src="img/skill/css.png" alt="css 이미지">
                             <img src="img/skill/jq.png" alt="제이쿼리 이미지">
@@ -331,6 +336,7 @@
         <section id="portfolio" class="flex column center paddingT50 paddingB50 vh100 box">
             <div class="wrap paddingT50  paddingB50 paddingL50 paddingR50" >
                 <h2 class="h2" data-aos="fade-left" data-aos-duration="2000">PORTFOLIO</h2>
+                <p class="p" data-aos="fade-left" data-aos-duration="2000">design clone coding</p>
                 <div class=" portAni flex">
                     <!-- <div class="port port1">
                         <h3>Accuniq</h3>
@@ -380,7 +386,7 @@
                         <a class="button" href="https://jwdy02.github.io/pf3-hbpaper-re/" target="_blank">VIEW</a>
                         <img src="img/portfolio/hbpaper_re.png" alt="hbpaper-리뉴얼 홈페이지">
                     </div>
-                    <!-- <div class="port port5">
+                    <div class="port port5">
                         <h3>Hitejinro</h3>
                         <ul class="list">
                             <li><span>TYPE</span>반응형 웹사이트 (기업체 홈페이지)</li>
@@ -391,9 +397,9 @@
                         </ul>
                         <a class="button" href="https://jwdy02.github.io/pf4-Hitejinro/" target="_blank">VIEW</a>
                         <img src="img/portfolio/hitejinro.png" alt="hitejinro홈페이지">
-                    </div> -->
+                    </div>
                     <div class="port port6">
-                        <h3>final kitchen</h3>
+                        <h3>Final kitchen</h3>
                         <ul class="list">
                             <li><span>TYPE</span>웹사이트 (기업체 홈페이지)</li>
                             <li><span>PAGE</span>index</li>
