--- a/index.html
+++ b/index.html
@@ -336,7 +336,7 @@
         <section id="portfolio" class="flex column center paddingT50 paddingB50 vh100 box">
             <div class="wrap paddingT50  paddingB50 paddingL50 paddingR50" >
                 <h2 class="h2" data-aos="fade-left" data-aos-duration="2000">PORTFOLIO</h2>
-                <p class="p" data-aos="fade-left" data-aos-duration="2000">design clone coding</p>
+                <!-- <p class="p" data-aos="fade-left" data-aos-duration="2000">design clone coding</p> -->
                 <div class=" portAni flex">
                     <!-- <div class="port port1">
                         <h3>Accuniq</h3>
