--- a/index.html
+++ b/index.html
@@ -294,7 +294,7 @@
                     <li>나이 : <span>만 25세</span></li>
                     <li>교육 : <span>모란 이젠 it 아카데미 웹퍼블리셔, 웹디자인 5개월 과정 수료</span></li>
                 </ul>
-                <img src="img/about/about2.png" alt="내사진">
+                <img src="img/about/about2.jpg" alt="내사진">
             </div>
         </section>
      <!-- 스킬 --> 
