--- a/index.html
+++ b/index.html
@@ -313,8 +313,8 @@
                         </li>
                         <li>
                             <h3 class="h4">publishing</h3>
-                            <p>퍼블리싱 과정을 공부하면서 <span>HTML, CSS, JQuary, Java script</span>를 배웠으며,<br>
-                                시멘틱 태그를 비롯한 웹 표준,웹 접근성, 웹 반응형의 작업을 할 수 있습니다.</p>
+                            <p>퍼블리싱 과정을 공부하면서 <span>HTML5, Css3, JQuary, Java script</span>를 배웠으며,<br>
+                                시멘틱 태그를 비롯한 웹 표준, 웹 접근성, 웹 반응형의 작업을 할 수 있습니다.</p>
                             <img src="img/skill/html.png" alt="html 이미지">
                             <img src="img/skill/css.png" alt="css 이미지">
                             <img src="img/skill/jq.png" alt="제이쿼리 이미지">
@@ -338,7 +338,7 @@
                 <h2 class="h2" data-aos="fade-left" data-aos-duration="2000">PORTFOLIO</h2>
                 <!-- <p class="p" data-aos="fade-left" data-aos-duration="2000">design clone coding</p> -->
                 <div class=" portAni flex">
-                    <!-- <div class="port port1">
+                    <div class="port port1">
                         <h3>Accuniq</h3>
                         <ul class="list">
                             <li><span>TYPE</span>웹사이트 (기업체 홈페이지)</li>
@@ -349,8 +349,8 @@
                         </ul>
                         <a class="button" href="https://jwdy02.github.io/pf1-accuniq/" target="_blank">VIEW</a>
                         <img src="img/portfolio/accuniq.png" alt="accuniq홈페이지">
-                    </div> -->
-                    <!-- <div class="port port2">
+                    </div>
+                    <div class="port port2">
                         <h3>Lpoint</h3>
                         <ul class="list">
                             <li><span>TYPE</span>웹사이트 (기업체 홈페이지)</li>
@@ -373,7 +373,7 @@
                         </ul>
                         <a class="button" href="https://jwdy02.github.io/pf3-hbpaper/" target="_blank">VIEW</a>
                         <img src="img/portfolio/hbpaper.png" alt="hbpaper홈페이지">
-                    </div> -->
+                    </div>
                     <div class="port port4">
                         <h3>HBpaper-리뉴얼</h3>
                         <ul class="list">
@@ -440,7 +440,7 @@
                             <li><span>TYPE</span>웹사이트 (기업체 홈페이지)</li>
                             <li><span>PAGE</span>index</li>
                             <li><span>TOOL</span>HTML5(emmet), CSS3(sass),<br>
-                                <span class="under">adobe</span></li>
+                                <span class="under">jqurey, adobe</span></li>
                             <li><span>work</span>퍼블리싱 100%</li>
                         </ul>
                         <a class="button" href="https://jwdy02.github.io/SM-Entertainment/" target="_blank">VIEW</a>
